force-app/main/default/objects/NEPA_Flow_Error__c.object
<CustomObject>
    <description>Lightweight flow error log. Captures fault messages from all NEPA record-triggered flows. When Nebula Logger is installed, replace NEPA_Error_Logger subflow body to route records there instead.</description>
    <label>NEPA Flow Error</label>
    <pluralLabel>NEPA Flow Errors</pluralLabel>
    <nameField>
        <label>Error Name</label>
        <type>AutoNumber</type>
        <displayFormat>FE-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>

    <fields>
        <fullName>nepa_flow_api_name__c</fullName>
        <label>Flow API Name</label>
        <type>Text</type>
        <length>255</length>
        <required>true</required>
    </fields>

    <fields>
        <fullName>nepa_error_message__c</fullName>
        <label>Error Message</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <fields>
        <fullName>nepa_record_id__c</fullName>
        <label>Record Id</label>
        <type>Text</type>
        <length>18</length>
    </fields>

    <fields>
        <fullName>nepa_occurred_at__c</fullName>
        <label>Occurred At</label>
        <type>DateTime</type>
    </fields>
</CustomObject>