force-app/main/default/objects/NEPA_Flow_Error__c/fields/nepa_failed_step__c.field-meta.xml
<CustomField>
<fullName>nepa_failed_step__c</fullName>
        <label>Last Known Step</label>
        <type>Text</type>
        <length>255</length>
</CustomField>