force-app/main/default/objects/NEPA_Flow_Error__c/fields/nepa_running_user__c.field-meta.xml
<CustomField>
<fullName>nepa_running_user__c</fullName>
        <label>Running User</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipLabel>NEPA Flow Errors</relationshipLabel>
        <relationshipName>NEPA_Flow_Errors</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
</CustomField>